[gd_scene load_steps=11 format=3 uid="uid://e6eb40u1xq8x"]

[ext_resource type="Script"     path="res://scenes/GameScene.gd"        id=1]
[ext_resource type="Script"     path="res://menus/PauseMenu.gd"         id=2]
[ext_resource type="Script"     path="res://menus/widgets/UIButton.gd"  id=3]
[ext_resource type="Script"     path="res://objects/Ball.gd"            id=4]
[ext_resource type="Script"     path="res://objects/Shield.gd"          id=5]
[ext_resource type="Texture2D"  path="res://assets/images/heart.png"    id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 10.0

[sub_resource type="RectangleShape2D" id=2]
size = Vector2(175, 175)

[sub_resource type="ParticleProcessMaterial" id=3]
direction            = Vector3(0, -1, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity              = Vector3(0, 98, 0)
scale_min            = 0.5
scale_max            = 1.5

[sub_resource type="PlaceholderTexture2D" id=4]

[sub_resource type="CircleShape2D" id=5]
radius = 30.0

[node name="GameScene" type="Control"]
process_mode    = 3
layout_mode     = 3
anchors_preset  = 15
anchor_right    = 1.0
anchor_bottom   = 1.0
script          = ExtResource(1)

[node name="Background" type="ColorRect" parent="."]
layout_mode    = 1
anchors_preset = 15
anchor_right   = 1.0
anchor_bottom  = 1.0
color          = Color(0, 0, 0, 1)

[node name="GameArea" type="Control" parent="."]
layout_mode     = 1
anchors_preset  = 15
anchor_right    = 1.0
anchor_bottom   = 1.0

[node name="PlayerContainer" type="Area2D" parent="GameArea"]
position = Vector2(576, 324)

[node name="PlayerCollision" type="CollisionShape2D" parent="GameArea/PlayerContainer"]
shape = SubResource(2)



[node name="Shield" type="Node2D" parent="GameArea"]
process_mode = 1
position     = Vector2(576, 324)
script       = ExtResource(5)

[node name="Ball" type="CharacterBody2D" parent="GameArea"]
process_mode = 1
position     = Vector2(576, 400)
script       = ExtResource(4)

[node name="BallSprite" type="ColorRect" parent="GameArea/Ball"]
anchors_preset = 8
anchor_left    = 0.5
anchor_top     = 0.5
anchor_right   = 0.5
anchor_bottom  = 0.5
offset_left    = -10.0
offset_top     = -10.0
offset_right   = 10.0
offset_bottom  = 10.0
color          = Color(1, 1, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/Ball"]
shape = SubResource(1)

[node name="ParticleSystem" type="GPUParticles2D" parent="GameArea/Ball"]
emitting         = false
amount           = 20
process_material = SubResource(3)
texture          = SubResource(4)
lifetime         = 1.0
one_shot         = true

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="LivesContainer" type="HBoxContainer" parent="UI"]
offset_left     = 20.0
offset_top      = 20.0
offset_right    = 200.0
offset_bottom   = 70.0

[node name="Heart1" type="TextureRect" parent="UI/LivesContainer"]
layout_mode         = 2
texture             = ExtResource(6)
expand_mode         = 1
stretch_mode        = 5
custom_minimum_size = Vector2(40, 40)

[node name="Heart2" type="TextureRect" parent="UI/LivesContainer"]
layout_mode         = 2
texture             = ExtResource(6)
expand_mode         = 1
stretch_mode        = 5
custom_minimum_size = Vector2(40, 40)

[node name="Heart3" type="TextureRect" parent="UI/LivesContainer"]
layout_mode         = 2
texture             = ExtResource(6)
expand_mode         = 1
stretch_mode        = 5
custom_minimum_size = Vector2(40, 40)

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset       = 7
anchor_left          = 0.5
anchor_top           = 1.0
anchor_right         = 0.5
anchor_bottom        = 1.0
offset_left          = -250.0
offset_top           = -200.0
offset_right         = 250.0
offset_bottom        = -20.0
grow_vertical        = 0
horizontal_alignment = 1
vertical_alignment   = 1
clip_text            = false

[node name="PauseButton" type="TextureButton" parent="UI"]
anchors_preset = 1
anchor_left    = 1.0
anchor_right   = 1.0
offset_left    = -120.0
offset_top     = 20.0
offset_right   = -20.0
offset_bottom  = 70.0
script         = ExtResource(3)

[node name="TutorialLabel" type="RichTextLabel" parent="UI"]
visible                      = false
layout_mode                  = 1
anchors_preset               = 8
anchor_left                  = 0.5
anchor_top                   = 0.5
anchor_right                 = 0.5
anchor_bottom                = 0.5
offset_left                  = -400.0
offset_top                   = 300.0
offset_right                 = 400.0
offset_bottom                = 400.0
grow_horizontal              = 2
grow_vertical                = 2
bbcode_enabled               = true
fit_content                  = true
scroll_active                = false
modulate                     = Color(1, 1, 1, 0)

[node name="PauseMenu" type="Control" parent="UI"]
visible        = false
layout_mode    = 3
anchors_preset = 15
anchor_right   = 1.0
anchor_bottom  = 1.0
process_mode   = 3
script         = ExtResource(2)

[node name="Background" type="ColorRect" parent="UI/PauseMenu"]
layout_mode    = 1
anchors_preset = 15
anchor_right   = 1.0
anchor_bottom  = 1.0
color          = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseMenu"]
layout_mode    = 1
anchors_preset = 8
anchor_left    = 0.5
anchor_top     = 0.5
anchor_right   = 0.5
anchor_bottom  = 0.5
offset_left    = -160.0
offset_top     = -200.0
offset_right   = 160.0
offset_bottom  = 200.0
alignment      = 1

[node name="TitleLabel" type="Label" parent="UI/PauseMenu/VBoxContainer"]
layout_mode          = 2
horizontal_alignment = 1
vertical_alignment   = 1

[node name="Spacer1" type="Control" parent="UI/PauseMenu/VBoxContainer"]
layout_mode         = 2
custom_minimum_size = Vector2(0, 60)

[node name="ButtonContainer" type="VBoxContainer" parent="UI/PauseMenu/VBoxContainer"]
layout_mode                         = 2
theme_override_constants/separation = 20
alignment                           = 1

[node name="ResumeButton" type="TextureButton" parent="UI/PauseMenu/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode         = 2
script              = ExtResource(3)

[node name="OptionsButton" type="TextureButton" parent="UI/PauseMenu/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode         = 2
script              = ExtResource(3)

[node name="MainMenuButton" type="TextureButton" parent="UI/PauseMenu/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode         = 2
script              = ExtResource(3)
